# coverage_might_work

./: Cargo.toml
.github/workflows/: coverage.yml  rust.yml
src/: lib.rs  main.rs  second.rs
tests/: test_main.rs  test_second.rs
