[package]
name = "coverage_might_work"
version = "0.1.0"
edition = "2021"

[lib]
name = "testing"
path = "src/testing.rs"  # Separate source file for the library target

[[bin]]
name = "coverage_might_work"
path = "src/main.rs"  # Source file for the binary target

[dependencies]
cargo-llvm-cov = "0.6.4"
