[package]
name = "coverage_might_work"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coverage_might_work"
path = "src/main.rs"  # Source file for the binary target

[lib]
name = "libname"  # Name of your library
path = "src/second.rs"  # Source file for the library

[dependencies]
cargo-llvm-cov = "0.6.5"
